concord_macros/tests/dsl/fail/fail_duplicate_behavior_in_list.stderr
error: duplicate behavior `read` in behavior list
  --> tests/dsl/fail/fail_duplicate_behavior_in_list.rs:12:29
   |
12 |             behavior [read, read]
   |                             ^^^^
